src/objects/Zendesk_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Zendesk__c</fullName>
        <label>Account Zendesk</label>
        <referenceTo>Account_Zendesk__c</referenceTo>
        <relationshipName>Zendesk_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalId__c</fullName>
        <label>PortalId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_User_Id__c</fullName>
        <label>Zendesk  User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Partner Contact</label>
    <nameField>
        <label>Zendesk Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Partner Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>